fixing images overlapping on masonry

--- a/css/style.scss
+++ b/css/style.scss
@@ -25,7 +25,7 @@ body {
   /*MASONRY - IMAGE LAYOUT*/
   .imageMasonry {
     display: grid;
-    grid-gap: 1.5em;
+    grid-gap: 2.5em;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     grid-auto-rows: 30vh;
     grid-auto-flow: dense;
